src/validation/tests/snapshots/rusty__validation__tests__array_validation_test__assignment_1d.snap
---
source: src/validation/tests/array_validation_test.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected KeywordSquareParensClose but found )
   ┌─ <internal>:15:34
   │
15 │             arr := [1, 2, 3, 4, 5);
   │                                  ^ Unexpected token: expected KeywordSquareParensClose but found )

error[E007]: Unexpected token: expected KeywordSemicolon but found ')'
   ┌─ <internal>:15:34
   │
15 │             arr := [1, 2, 3, 4, 5);
   │                                  ^ Unexpected token: expected KeywordSemicolon but found ')'

error[E007]: Unexpected token: expected KeywordParensClose but found ']'
   ┌─ <internal>:16:34
   │
16 │             arr := (1, 2, 3, 4, 5];
   │                                  ^ Unexpected token: expected KeywordParensClose but found ']'

error[E006]: Missing expected Token [KeywordParensClose]
   ┌─ <internal>:16:35
   │
16 │             arr := (1, 2, 3, 4, 5];
   │                                   ^ Missing expected Token [KeywordParensClose]

error[E007]: Unexpected token: expected KeywordParensClose but found ';'
   ┌─ <internal>:16:35
   │
16 │             arr := (1, 2, 3, 4, 5];
   │                                   ^ Unexpected token: expected KeywordParensClose but found ';'

error[E043]: Too many initial values for array `arr`. Expected 5, found 6.
  ┌─ <internal>:4:54
  │
4 │                 arr         : ARRAY[1..5] OF DINT := [1, 2, 3, 4, 5, 6];
  │                                                      ^^^^^^^^^^^^^^^^^^ Too many initial values for array `arr`. Expected 5, found 6.

error[E043]: Array assignments must be surrounded with `[]`
  ┌─ <internal>:5:55
  │
5 │                 arr_alt     : ARRAY[1..5] OF DINT := (1, 2, 3, 4, 5, 6);
  │                                                       ^^^^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`

warning[E127]: Fewer initial values for array `arr` than expected. Expected 5, found 4.
  ┌─ <internal>:8:20
  │
8 │             arr := [1, 2, 3, 4];    // Valid
  │                    ^^^^^^^^^^^^ Fewer initial values for array `arr` than expected. Expected 5, found 4.

error[E043]: Array assignments must be surrounded with `[]`
   ┌─ <internal>:11:21
   │
11 │             arr := (1, 2, 3, 4);
   │                     ^^^^^^^^^^ Array assignments must be surrounded with `[]`

error[E043]: Array assignments must be surrounded with `[]`
   ┌─ <internal>:12:21
   │
12 │             arr := (1, 2, 3, 4, 5);
   │                     ^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`

error[E043]: Array assignments must be surrounded with `[]`
   ┌─ <internal>:13:21
   │
13 │             arr := (1, 2, 3, 4, 5, 6);
   │                     ^^^^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`

error[E043]: Too many initial values for array `arr`. Expected 5, found 6.
   ┌─ <internal>:14:20
   │
14 │             arr := [1, 2, 3, 4, 5, 6];
   │                    ^^^^^^^^^^^^^^^^^^ Too many initial values for array `arr`. Expected 5, found 6.

error[E043]: Array assignments must be surrounded with `[]`
   ┌─ <internal>:15:34
   │
15 │             arr := [1, 2, 3, 4, 5);
   │                                  ^ Array assignments must be surrounded with `[]`

error[E043]: Array assignments must be surrounded with `[]`
   ┌─ <internal>:16:21
   │
16 │             arr := (1, 2, 3, 4, 5];
   │                     ^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`
